--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Meet me on a bike. Let's ride together</h1>
+								<h1>Meet better tools to facilitate a better life</h1>
 							</header>
 							<section class="tiles">
 								<article class="style1">
@@ -42,7 +42,7 @@
 									</span>
 									<h2>Story</h2>
 									<div class="content">
-										<p>Bike Story</p>
+										<p>Catalogue</p>
 									</div>
 								</article>
 								<article class="style2">
@@ -51,7 +51,7 @@
 									</span>
 									<h2>Calorie</h2>
 									<div class="content">
-										<p>Riding Calorie</p>
+										<p>For example</p>
 									</div>
 								</article>
 							</section>
